Added Update Event and Defautt Photo